# sqllite

./: .gitignore  README.md  main.py  mydb.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: Orders2023.csv  Orders2023.xlsx  __init__.py  add_data.py  client.py  create_database.py  mapper.py  order.py  product.py  test.py
tests/: __init__.py  test_add_data.py  test_client.py  test_create_database.py  test_order.py  test_product.py
