[tool.poetry]
name = "sqllite"
version = "0.1.0"
description = ""
authors = ["Simon Suthers <simonsuthers@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
SQLAlchemy = "^2.0.12"
pandas = "^2.0.1"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
